objects/Symbol__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <description>descr
&quot;quots&quot;
AT&amp;T
1 &gt;2</description>
        <label>Field1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field5__c</fullName>
        <label>field5</label>
        <length>122</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field6__c</fullName>
        <label>field6</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>picklist1__c</fullName>
        <description>for test</description>
        <label>picklist1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yen ¥</fullName>
                </value>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Yahoo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>picklist2__c</fullName>
        <label>picklist2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>value1</fullName>
                </value>
                <value>
                    <fullName>value2</fullName>
                </value>
                <value>
                    <fullName>value3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Symbol</label>
    <nameField>
        <label>Symbols Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Symbols</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>